# libpolynomial

./: .gitignore  CMakeLists.txt  Polynomial.c  makefile  tests.c
examples/: Parallel.c  defs.rkt  poly_ffi_bench.rkt  polyroots.rkt  quart-fl2.rkt  refine-root-DBL-vs-LDBL.rkt  rootbounds.rkt  tests.c  utils.rkt
src/: Polynomial.h  Polynomial5.c  Polynomial5.h
